--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "start": "nodemon -x node index.js || touch index.js",
+    "node .": "node run index.js",
     "test": "node test.js"
   },
   "nodemonConfig": {
@@ -28,7 +29,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Nurutomo/wabot-aq.git"
+    "url": "git+https://github.com/Win-Web4U/win-bot.git"
   },
   "bugs": {
     "url": "https://github.com/Nurutomo/wabot-aq/issues"
