--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "scripts": {
     "start": "nodemon -x node index.js || touch index.js",
-    "node .": "node run index.js",
     "test": "node test.js"
   },
   "nodemonConfig": {
@@ -29,7 +28,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Win-Web4U/win-bot.git"
+    "url": "git+https://github.com/Nurutomo/wabot-aq.git"
   },
   "bugs": {
     "url": "https://github.com/Nurutomo/wabot-aq/issues"
